<resources>
    <string name="app_name">Dummock</string>
    <string name="txt_home_mock_archive">Mock Archive</string>
    <string name="txt_home_new_mock">New Mock</string>
    <string name="txt_map_help">برای شروع مسیریابی، مبدا و مقصد را انتخاب کنید</string>
    <string name="txt_start">شروع</string>
    <string name="txt_save">ذخیره</string>
    <string name="txt_ok">تایید</string>
    <string name="txt_cancel">لغو</string>
    <string name="txt_kilometer">کیلومتر</string>
    <string name="txt_minute">دقیقه</string>
    <string name="txt_delay_no">بدون توقف</string>
    <string name="txt_default_speed">سرعت 50 km/h</string>
    <string name="txt_walk">پیاده</string>
    <string name="txt_bike">موتور</string>
    <string name="txt_car">خودرو</string>
    <string name="txt_route_settings">تنظیمات مسیر</string>
    <string name="txt_route_info">اطلاعات مسیر</string>
    <string name="txt_change_origin_destination">جابجایی مبدا و مقصد</string>
    <string name="txt_choose_origin">انتخاب مبدا</string>
    <string name="txt_choose_destination">انتخاب مقصد</string>
    <string name="txt_share_route">اشتراک گذاری</string>
    <string name="txt_navigate_route_intent">مسیریاب های دیگر</string>
    <string name="intent_navigate">geo:%1$s,%2$s?q=%3$s,%4$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_move_speed_fa">سرعت حرکت:</string>
</resources>