<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btmSheetRouteDetailRoot"
    style="@style/CustomCardCornerRadius"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    app:behavior_hideable="false"
    app:behavior_peekHeight="100dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/btmSheetRouteDetailGuideTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/default_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/btmSheetRouteDetailGuideBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/default_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/btmSheetRouteDetailGuideLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/default_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/btmSheetRouteDetailGuideRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/default_margin" />

        <ProgressBar
            android:id="@+id/btmSheetRouteDetailProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/pink_700"
            app:layout_constraintEnd_toEndOf="@id/btmSheetRouteDetailGuideRight"
            app:layout_constraintStart_toStartOf="@id/btmSheetRouteDetailGuideLeft"
            app:layout_constraintTop_toTopOf="@id/btmSheetRouteDetailGuideTop" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btmSheetRouteDetailMainViews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/btmSheetRouteDetailGuideBottom"
            app:layout_constraintEnd_toEndOf="@id/btmSheetRouteDetailGuideRight"
            app:layout_constraintStart_toStartOf="@id/btmSheetRouteDetailGuideLeft"
            app:layout_constraintTop_toTopOf="@id/btmSheetRouteDetailGuideTop">

            <View
                android:layout_width="24dp"
                android:layout_height="4dp"
                android:background="@drawable/bg_divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btmSheetRouteDetailTxtRouteInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/txt_route_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/btmSheetRouteDetailViewRouteInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:gravity="end"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btmSheetRouteDetailBtnStartNavPeek"
                app:layout_constraintTop_toBottomOf="@id/btmSheetRouteDetailTxtRouteInfo">

                <TextView
                    android:id="@+id/btmSheetRouteDetailTxtRouteDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="10 کیلومتر" />

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:background="@color/grey_700" />

                <TextView
                    android:id="@+id/btmSheetRouteDetailTxtRouteDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="32 دقیقه" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btmSheetRouteDetailBtnStartNavPeek"
                style="@style/DButton.Primary.Active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_start"
                app:icon="@drawable/ic_baseline_navigation_24"
                app:layout_constraintBottom_toBottomOf="@id/btmSheetRouteDetailViewRouteInfo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btmSheetRouteDetailGpSettings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:alpha="0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btmSheetRouteDetailViewRouteInfo"
                tools:alpha="1">


                <TextView
                    android:id="@+id/btmSheetRouteDetailTxtRouteSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_route_settings"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <HorizontalScrollView
                    android:id="@+id/btmSheetRouteDetailViewRouteSettings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:scrollbars="none"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btmSheetRouteDetailTxtRouteSettings">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btmSheetRouteDetailSettingsTypeCar"
                            style="@style/DButton.Outline.Primary.Active"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/default_margin"
                            android:text="@string/txt_car"
                            app:icon="@drawable/ic_baseline_directions_car_24" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btmSheetRouteDetailSettingsTypeBike"
                            style="@style/DButton.Outline.Primary.InActive"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/default_margin"
                            android:text="@string/txt_bike"
                            app:icon="@drawable/ic_baseline_directions_bike_24" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btmSheetRouteDetailSettingsSpeed"
                            style="@style/DButton.Outline.Primary.InActive"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/default_margin"
                            android:text="@string/txt_default_speed" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btmSheetRouteDetailSettingsDelay"
                            style="@style/DButton.Outline.Primary.InActive"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_delay_no"
                            android:visibility="gone" />

                    </LinearLayout>

                </HorizontalScrollView>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btmSheetRouteDetailBtnSave"
                    style="@style/DButton.Outline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/txt_save"
                    app:icon="@drawable/ic_baseline_bookmark_border_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btmSheetRouteDetailViewRouteSettings" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btmSheetRouteDetailBtnStartNav"
                    style="@style/DButton.Primary.Active"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/txt_start"
                    app:icon="@drawable/ic_baseline_navigation_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btmSheetRouteDetailBtnSave"
                    app:layout_constraintTop_toBottomOf="@id/btmSheetRouteDetailViewRouteSettings" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>